correct bio for language audiodoc

--- a/app/static/texts/language_author_bio.html
+++ b/app/static/texts/language_author_bio.html
@@ -1,5 +1,5 @@
 <html>
 <p class="justify">
-Vieri Samek-Lodovici is a Reader in Linguistics at UCL, co-editor of the Advances in Optimality Theory book series with Equinox Publishing, and author of The Interaction of Focus, Giveness, and Prosody, recently published by Oxford University Press. His research concerns the ways syntax and intonation affect each others, as well as the best way to model their complex interactions.
+Vieri is a Reader in Linguistics at UCL whose research concerns the ways syntax and intonation affect each other, as well as the best way to model their complex interactions. He is the author of ​<i>The Interaction of Focus, Giveness, and Prosody</i>, which was recently published by Oxford University Press.
 </p>
 </html>
