optimized a lot of the box images

--- a/app/static/texts/blast_injury_author_bio.html
+++ b/app/static/texts/blast_injury_author_bio.html
@@ -1,5 +1,5 @@
 <html>
   <p class = 'justify'>
-    Emily is a Visiting Researcher in the Department of Bioengineering at Imperial College London, working primarily with the Centre for Blast Injury Studies. A military medical historian, she specialises in the study of severe casualty in 20th- and 21st-century warfare. Her book ​_Wounded_​ documents the story of the stretcher bearers and medics who saved hundreds of thousands of injured soldiers in World War I.
+    Emily is a Visiting Researcher at Imperial College London, working primarily with the Centre for Blast Injury Studies. As a military medical historian, she specialises in severe casualty in 20th and 21st-century warfare. Also a successful author, her book 'Wounded' was shortlisted for the 2014 Wellcome Book Prize.
   </p>
 </html>
