--- a/app/static/texts/blast_injury_author_bio.html
+++ b/app/static/texts/blast_injury_author_bio.html
@@ -1,5 +1,5 @@
 <html>
   <p class = 'justify'>
-    Emily is a Visiting Researcher at Imperial College London, working primarily with the Centre for Blast Injury Studies. A military medical historian, she specialises in severe casualty in 20th- and 21st-century warfare. Her book <i>Wounded</i>​ was shortlisted for the 2014 Wellcome Book Prize.
+    Emily is a historian in residence at Imperial College London, working primarily with the Centre for Blast Injury Studies. A military medical historian, she specialises in severe casualty in 20th- and 21st-century warfare. Her book <i>Wounded</i>​ was shortlisted for the 2014 Wellcome Book Prize.
   </p>
 </html>
