more zoltan info added

--- a/app/static/texts/flying_spying_author_bio.html
+++ b/app/static/texts/flying_spying_author_bio.html
@@ -1,4 +1,4 @@
 <html>
-<p class = 'justify'>Zoltán is a historian at University College London. Teaching in the department of Spanish, Portuguese and Latin American Studies, he studies the cultural production of the Portuguese Empire during the 16th and 17th centuries. This includes chronicles, letters, travel accounts – and many maps.
+<p class = 'justify'> Zoltán is a historian at UCL, teaching in the Department of Spanish, Portuguese and Latin American Studies. He studies the cultural production of the Portuguese Empire during the 16th and 17th centuries, which includes chronicles, letters, travel accounts – and maps, many maps.
 </p>
 </html>
