ready to upload Alex' audiodoc

--- a/app/static/texts/travel_author_bio.html
+++ b/app/static/texts/travel_author_bio.html
@@ -1,1 +1,1 @@
-Alexander Samson's bio
+Dr Alexander Samson is a lecturer at University College London, where he teaches the history, culture, and literature of early modern Spain and Latin America. His research interests include the influence of Spanish culture in early modern England, festival texts, the Habsburg empire under Charles V and early colonial history.
