forgery episode ready. also fixed the hyphen-dash bullshit. need to change a bunch on cover image captions now

--- a/app/static/texts/flying_spying_author_bio.html
+++ b/app/static/texts/flying_spying_author_bio.html
@@ -1,1 +1,1 @@
-Zoltán is a historian at UCL, teaching in the Department of Spanish, Portuguese and Latin American Studies. He studies the cultural production of the Portuguese Empire during the 16th and 17th centuries, which includes chronicles, letters, travel accounts – and maps, many maps.
+Zoltán is a historian at UCL, teaching in the Department of Spanish, Portuguese and Latin American Studies. He studies the cultural production of the Portuguese Empire during the 16th and 17th centuries, which includes chronicles, letters, travel accounts — and maps, many maps.
