russia typo fix

--- a/app/static/texts/russia_west_author_bio.html
+++ b/app/static/texts/russia_west_author_bio.html
@@ -1,1 +1,1 @@
-Elisabeth is a Leverhulme Early Career Fellow at UCL, teaching Russian politics at the School of Slavonic & East European Studies. Her current research compares the philanthropic practices of Britain's and Russian's super-rich.
+Elisabeth is a Leverhulme Early Career Fellow at UCL, teaching Russian politics at the School of Slavonic & East European Studies. Her current research compares the philanthropic practices of Britain's and Russia's super-rich.
