modify_genome episode ready to go up

--- a/app/static/texts/modify_genome_author_bio.html
+++ b/app/static/texts/modify_genome_author_bio.html
@@ -1,1 +1,1 @@
-Author bio..
+Gabriele is a neuroscientist at UCL whose research focuses on new approaches in the treatment of neurological disorders, which include gene editing and regulation in different neurons and brain regions. He has a passion for all sorts of animals and when he is not busy with his neurons at work, he enjoys spending time hiking with his two dogs.
